    TODO:  Long GNU named params for command line tool, e.g. --some-option
    TODO: New button-based output mode?
    TODO: Initial focus in Platypus window should be "App Name" text field, not Icon View
    TODO: Make Status Items look good in Yosemite's Dark Mode: http://indiestack.com/2014/10/yosemites-dark-mode/

For 4.9
    * Users can now manually increase/decrease the font size in Platypus-generated apps
    * Status menu items can now be selected. This will run the script again with the menu title as an argument.
    * Arguments can now be passed to Platypus-generated apps via the command line
    * In Progress Bar output, it is now possible to use DETAILS:SHOW and DETAILS:HIDE to toggle details field visibility
    * New feature: If script prints "QUITAPP" to STDOUT, the wrapper application will quit.
    * Platypus now remembers app creation dialog settings such as "Optimize Nib"
    * Platypus now remembers opened Profiles in the Open Recent menu
    * It is now possible to add a custom MainMenu.nib to bundled files which overwrites default
    * Extended and improved documentation
    * Built with XCode 6, now requires Mac OS X 10.6 or later
    * Fixed a bug where "Provide as a Service" failed to be read from saved profiles
    * Fixed bug where a custom bundle identifier in a saved Profile would not be loaded
    * Fixed bug where the Create button would remain greyed out even though all requirements were satisfied
    * Fixed bug where progress indicator would keep animating after execution in Progress Bar output mode
    * Fixed bug where command line tool complained about valid .icns filenames
    * Fixed bug where command line tool would always created XML property lists instead of binary ones
    * Refactored all deprecated method calls
    * Various minor interface refinements
    * Fixed row height in bundled file list
    * Updated version of IconFamily class
    * Improved documentation

For 4.8
    * New "Prompt for file on launch" option